--- a/src/app/liaisons/liaisons.component.html
+++ b/src/app/liaisons/liaisons.component.html
@@ -1,6 +1,8 @@
 <button on-click="afficherClick()"
-        style="background-color: yellow;
+                 style="background-color: darkred;
         height: 100px;
         width: 200px">
     click
 </button>
+
+Liaisons works !
